--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 /* End Body */
 /* Start Debug*/
 .bg-aquamarine{
-    background-color: slategray;
+    background-color: #173F5F;
 }
 .bg-brown{
     background-color: rgb(134, 131, 131);
@@ -115,6 +115,7 @@ h6 {
 .jumbotron h1{
     font-size: 32px;
     padding: 0 20px;
+    text-align: center;
 }
 .jumbotron h3{
     font-size: 20px;
@@ -187,7 +188,7 @@ h6 {
 /* end testimonial*/
 
 .menu-skunder{
-    background-color: azure;
+    background-color: antiquewhite;
     border-bottom: rgb(39, 30, 30);
     border-top: 1px solid rgb(22, 18, 18);
     overflow: auto;
